infra.yml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: url-shortener-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener
            port:
              number: 80
